--- a/BlazingPizza/Pages/Index.razor
+++ b/BlazingPizza/Pages/Index.razor
@@ -1,6 +1,9 @@
 @page "/"
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
+@using BlazingPizza.Services
+@inject OrderState OrderState
+
 <div class="main">
 	<h1>Blazing Pizzas</h1>
 	<ul class="pizza-cards">
@@ -8,7 +11,7 @@
 		{
 			@foreach(var special in specials)
 			{
-				<li style="background-image: url('@special.ImageUrl')">
+				<li @onclick="@(() => OrderState.ShowConfigurePizzaDialog(special))" style="background-image: url('@special.ImageUrl')">
 					<div class="pizza-info">
 						<span class="title">@special.Name</span>
 						@special.Description
@@ -20,9 +23,50 @@
 	</ul>
 </div>
 
-		
+@if (OrderState.ShowingConfigureDialog)
+{
+	<ConfigurePizzaDialog
+      Pizza="OrderState.ConfiguringPizza"
+      OnCancel="OrderState.CancelConfigurePizzaDialog"
+      OnConfirm="OrderState.ConfirmConfigurePizzaDialog" />
+}
+<div class="sidebar">
+	@if (order.Pizzas.Any())
+	{
+		<div class="order-contents">
+			<h2>Your order</h2>
+
+			@foreach (var configuredPizza in order.Pizzas)
+			{
+				<div class="cart-item">
+					<div class="title">@(configuredPizza.Size)" @configuredPizza.Special.Name</div>
+					<div class="item-price">
+						@configuredPizza.GetFormattedTotalPrice()
+					</div>
+					<a @onclick="@(() => OrderState.RemoveConfiguredPizza(configuredPizza))" class="delete-item">x</a>
+				</div>
+			}
+		</div>
+	}
+	else
+	{
+		<div class="empty-cart">Choose a pizza<br>to get started</div>
+	}
+
+	<div class="order-total @(order.Pizzas.Any() ? "" : "hidden")">
+		Total:
+		<span class="total-price">@order.GetFormattedTotalPrice()</span>
+		<a href="checkout" class="@(OrderState.Order.Pizzas.Count == 0 ? "btn btn-warning disabled" : "btn btn-warning")">
+			Order >
+		</a>
+	</div>
+</div>
 @code{
+
+	// Pizza configuringPizza;
+	// bool showingConfigureDialog;
 	List<PizzaSpecial> specials = new();
+	Order order => OrderState.Order;
 
 	protected override async Task OnInitializedAsync()
 	{
@@ -37,4 +81,16 @@
 		// 	new PizzaSpecial { Name = "Classic pepperoni", BasePrice =  10.5M, Description = "It's the pizza you grew up with, but Blazing hot!", ImageUrl="img/pizzas/pepperoni.jpg" }
 		// });
 	}
+
+	// void ShowConfigurePizzaDialog(PizzaSpecial special)
+	// {
+	// 	configuringPizza = new Pizza()
+	// 		{
+	// 			Special = special,
+	// 			SpecialId = special.Id,
+	// 			Size = Pizza.DefaultSize
+	// 		};
+
+	// 	showingConfigureDialog = true;
+	// }
 }
